Ignorar CSVs grandes
Former-commit-id: 690b377ff8816ff89483a2930c5d455a141c49cc

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,5 @@ data/elliptic_bitcoin_dataset/*.csv
 results/*.csvdata/elliptic_bitcoin_dataset/*.csv
 results/*.csv
 .DS_Store
+data/elliptic_bitcoin_dataset/*.csv
+results/*.csv
